[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superui"
version = "0.1.0"
description = "Minimal Tkinter-based UI wrapper with stack-based remove system"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "olan" }
]

keywords = ["ui", "kivy", "gui", "cross-platform", "android"]

[tool.setuptools]
packages = ["superui"]